# osbot-v5

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy.yml  pr-review.yml
deploy/: Dockerfile
src/osbot/: config.py  log.py  types.py
src/osbot/discovery/: __init__.py  feedback.py
src/osbot/discovery/issues/: finder.py  quality.py  scorer.py
src/osbot/discovery/qualify/: scorer.py  signals.py  tiers.py
src/osbot/discovery/search/: dependency_search.py  description_search.py  readme_search.py  topic_search.py
src/osbot/gateway/: github.py
src/osbot/intel/: graphql.py
src/osbot/safety/: domain.py
src/osbot/state/: memory.py  migrations.py
tests/unit/discovery/: test_quality.py  test_scorer.py  test_tiers.py
